--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 </h3></div>
 
                 <div class="button-box">
-                    <a href="https://linyiting11.github.io/konouni_Resume.io/" target="_blank"><input class="btn1" type="button" value="Resume" name="RESUME"></a>
+                    <a href="https://drive.google.com/drive/folders/1nwaOD5KZ6K7k2WGRvRQT2I00zG811jb6?usp=sharing" target="_blank"><input class="btn1" type="button" value="Resume" name="RESUME"></a>
                     <a href="https://linyiting11.github.io/konouni_Project.io/" target="_blank"><input class="btn2" type="button" value="Projects" name="RESUME"></a>
                     <a href="https://www.linkedin.com/in/konno2023/" target="_blank"><button class="btn3" type="button"><img src="img/In_b.png" style="width:100%;"></button></a>
                 </div>
