--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </h2></div>
 
                 <div><h3>
-                    我是林 翊婷，一名視覺/網頁設計師
+                    我是林 翊婷，一名視覺兼網頁設計師
                 </h3></div>
 
                 <div class="button-box">
