--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <meta property="og:locale" content="zh_TW">
     
     <!-- favicon-->
-    <link rel="shortcut icon" type="image/x-icon" href="./img/konouni.ico">
-    <link rel="icon" type="image/x-icon" href="./img/konouni.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="img/konouni.ico">
+    <link rel="icon" type="image/x-icon" href="img/konouni.ico">
     
     <!-- css-->    
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -57,8 +57,9 @@
                 <span class="line line3"></span>
             </div>  
             <div class="logo">
+            <a href="https://linyiting11.github.io/konouni.io/"><div class="logo">
             <img class="fit-picture" src="img/konouni-logo.png" alt="Konouni logo">
-            <h6>/ Konouni</h6>
+            </div></a>
             </div>
             <div class="menu-items">
                 <li><a href="https://linyiting11.github.io/konouni.io/" target="_blank">About Me</a></li>
