--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <meta property="og:locale" content="zh_TW">
     
     <!-- favicon-->
-    <link rel="shortcut icon" type="image/x-icon" href="./img/konounilogo.ico">
-    <link rel="icon" type="image/x-icon" href="./img/konounilogo.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="./img/konouni.ico">
+    <link rel="icon" type="image/x-icon" href="./img/konouni.ico">
     
     <!-- css-->    
     <link rel="stylesheet" type="text/css" href="style.css">
