--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </h2></div>
 
                 <div><h3>
-                    我是林 翊婷，一名視覺/網頁設計師
+                    我是林 翊婷，一名視覺兼網頁設計師
                 </h3></div>
 
                 <div class="button-box">
@@ -100,13 +100,13 @@
                 </div>
 
                 <div><p>
-                    我是視覺兼網頁設計師，具備與PM與RD的協作經驗，
-                    了解設計、行銷與Web開發技術，擅長從不同角度取得平衡設計。
+                    我是視覺與網頁設計師，具備與PM與RD的協作經驗，
+                    了解設計、行銷廣宣與Web開發技術，擅長從不同角度取得平衡設計。
                     <br>
                     <br>
-                    大學就讀整合設計，有跨領域思維與良好的自學能力，
-                    喜歡挑戰用多元的設計方法解決問題，
-                    重視自我成長並隨時保持開放彈性！
+                    有跨領域思維、喜歡透過自學成長，
+                    熱於挑戰用多元的設計方法解決問題，
+                    並對事物保持開放與彈性！
                 </p></div>
                 <div>
                     <img class="skill-list2" src="img/card-04.png">      
