--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                 <img class="my-pic1" src="img/card-03.png">
                 <h3>林翊婷</h5>
                 <h6>__</h6>
-                <h4>Pi 拍錢包 | PChome online</h4>
-                <h4>視覺兼網頁設計師</h4>
+                <h4>Gogolook|Roo.Cash</h4>
+                <h4>Brand Designer</h4>
                 <img class="skill-list1" src="img/card-04.png">
             </div>
             <div class="item-R item-2">
@@ -90,7 +90,7 @@
                 </h2></div>
 
                 <div><h3>
-                    我是林 翊婷，一名視覺兼網頁設計師
+                    我是翊婷，擅長視覺與網頁的品牌設計師
                 </h3></div>
 
                 <div class="button-box">
@@ -100,7 +100,6 @@
                 </div>
 
                 <div><p>
-                    我是視覺與網頁設計師，具備與PM與RD的協作經驗，
                     了解設計、行銷廣宣與Web開發技術，擅長從不同角度取得平衡設計。
                     <br>
                     <br>
